# AesthetixOS

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
DOCS/: api-specs.md  inti.md
backend-core/: Dockerfile  pyproject.toml
backend-core/clinic/: models.py  serializers.py  urls.py  views.py
backend-core/clinic/migrations/: 0001_initial.py
backend-core/commerce/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend-core/core/: celery.py  models.py  serializers.py  settings.py  urls.py
backend-core/core/services/: storage.py
backend-core/tasks/: commission_tasks.py
frontend-host/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend-host/src/: App.vue  api.ts  remotes.d.ts
frontend-host/src/components/dashboard/: DashboardActivity.vue  DashboardHero.vue  DashboardMetrics.vue  DashboardModules.vue
frontend-host/src/layouts/: MainLayout.vue
frontend-host/src/router/: index.ts
frontend-host/src/stores/: useActivityStore.ts  useUIStore.ts
frontend-host/src/views/: Dashboard.vue  ErrorLoad.vue
frontend-remote-emr/: index.html  package.json  vite.config.ts
frontend-remote-emr/src/components/: FaceCanvas.vue
frontend-remote-emr/src/views/: PatientModule.vue
frontend-remote-pos/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend-remote-pos/src/components/: SmartCourseGrid.vue
frontend-remote-pos/src/views/: BillingModule.vue
